# CSC134

./: .gitignore  .gitmodules  README.md  echo  setup.sh
CMakeProjectTest/: CMakeLists.txt  CMakePresets.json  vcpkg.json
CMakeProjectTest/TestDynamicLibrary/: CMakeLists.txt
CMakeProjectTest/TestDynamicLibrary/src/TestDynamicLibrary/: Mod.cpp
CMakeProjectTest/TestExecutable/: CMakeLists.txt
CMakeProjectTest/TestExecutable/src/: main.cpp
CMakeProjectTest/TestStaticLibrary/: CMakeLists.txt
CMakeProjectTest/TestStaticLibrary/include/TestStaticLibrary/: Foo.h  Mod.h  ModAPI.h  ModLibrary.h  ModSystem.h
CMakeProjectTest/TestStaticLibrary/src/TestStaticLibrary/: Foo.cpp  Mod.cpp  ModAPI.cpp  ModSystem.cpp
FnptrTest/: main.cpp
M1HW1/: main.cpp
M1Lab/: main.cpp
M1T1/: main.cpp
M2Bonus/: main.cpp
M2HW1/: main.cpp
M2Lab1/: main.cpp
M2Lab2/: main.py
M2T1/: main.cpp
M2T2/: main.cpp
M3HW1/: main.cpp
M3Lab1/: .gitignore  .gitmodules  CMakeLists.txt  Log.txt  Old.data  README.md  bonk.data  encounter.data  encounters.data  entities.data  example.cpp  fileTest.cpp  main  main.cpp  scripting.cpp  starts.data  test.data  thingy.cpp  vcpkg.json
M3Lab1/ArsTimoris/: CMakeLists.txt
M3Lab1/ArsTimoris/Assets/Data/: encounters.data
M3Lab1/ArsTimoris/include/ArsTimoris/: ArsTimoris.h
M3Lab1/ArsTimoris/include/ArsTimoris/DataComponents/: DataContainer.h  DataContainer.tpp
M3Lab1/ArsTimoris/include/ArsTimoris/Game/: GameData.h  GameState.h  StartData.h
M3Lab1/ArsTimoris/include/ArsTimoris/Game/Classes/: ClassData.h  ClassInstance.h  ClassLevel.h
M3Lab1/ArsTimoris/include/ArsTimoris/Game/Entity/: EntityData.h  EntityTemplate.h  NPCData.h  NPCTemplate.h  PlayerData.h
M3Lab1/ArsTimoris/include/ArsTimoris/Game/Interaction/: Action.h  ItemUsage.h  RoomAction.h  TimedEffect.h
M3Lab1/ArsTimoris/include/ArsTimoris/Game/Inventory/: ItemData.h  ItemStack.h
M3Lab1/ArsTimoris/include/ArsTimoris/Game/Map/: ConnectionInstance.h  ConnectionTest.h  Encounter.h  RoomData.h  RoomInstance.h
M3Lab1/ArsTimoris/include/ArsTimoris/Game/Shop/: ShopCatalog.h  ShopData.h  ShopGenerationRule.h  ShopInstance.h
M3Lab1/ArsTimoris/include/ArsTimoris/Sockscript/: Interpreter.h  Interpreter.tpp  InterpreterContext.h
M3Lab1/ArsTimoris/include/ArsTimoris/Util/: DebugLogging.hpp  Input.hpp  Random.hpp  String.hpp
M3Lab1/ArsTimoris/src/: main.cpp
M3Lab1/ArsTimoris/src/ArsTimoris/DataComponents/: DataContainer.cpp
M3Lab1/ArsTimoris/src/ArsTimoris/Game/: GameData.cpp  GameState.cpp  StartData.cpp
M3Lab1/ArsTimoris/src/ArsTimoris/Game/Classes/: ClassInstance.cpp
M3Lab1/ArsTimoris/src/ArsTimoris/Game/Entity/: EntityData.cpp  EntityTemplate.cpp  NPCData.cpp  PlayerData.cpp
M3Lab1/ArsTimoris/src/ArsTimoris/Game/Inventory/: ItemData.cpp  ItemStack.cpp
M3Lab1/ArsTimoris/src/ArsTimoris/Game/Map/: ConnectionInstance.cpp  Encounter.cpp  RoomData.cpp  RoomInstance.cpp
M3Lab1/ArsTimoris/src/ArsTimoris/Game/Shop/: ShopData.cpp
M3Lab1/ArsTimoris/src/ArsTimoris/Sockscript/: Interpreter.cpp  InterpreterContext.cpp
M3Lab1/ArsTimoris/src/ArsTimoris/Util/: DebugLogging.cpp  Random.cpp
M3Lab1/Data/: encounters.data  entities.data
M3Lab1/Docs/: Encounters.md  Entities.md  Starts.md
M3Lab1/Redacted/: encounter.data  scripting.cpp
M3Lab1/scripts/: build.bat  build.ps1  build.sh  debug.bat  debug.ps1  debug.sh  environment.bat  environment.ps1  environment.sh  release.bat  release.ps1  release.sh
M3Lab1/src/: main.cpp
M3Lab1/src/DataComponents/: DataContainer.cpp  DataContainer.h
M3Lab2/: main.cpp
M3T1/: main.cpp
M3T2/: main.cpp
M4HW1/: main.cpp
M4Lab1/: main.cpp
M4T1/: main.cpp
M5HW1/: main.cpp
M5Lab2/: main.cpp
M5T1/: main.cpp
M5T2/: main.cpp
M6Bonus/: a.ppm  main.cpp
M6Lab1/: main.cpp
M6Lab2/: main.cpp
M7T1/: main.cpp
M7T2/: Rectangle.cpp  Rectangle.h  main.cpp
Util/: Input.cpp  Input.h
